--- a/CVFiller/CVFiller/CVFiller.csproj
+++ b/CVFiller/CVFiller/CVFiller.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CVForm.cs">
@@ -52,6 +53,7 @@
     <Compile Include="CVForm.Designer.cs">
       <DependentUpon>CVForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="LowLevelKeyboardListener.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="CVForm.resx">
