--- a/CVFiller/CVFiller/FormFiller.csproj
+++ b/CVFiller/CVFiller/FormFiller.csproj
@@ -116,6 +116,12 @@
     <Compile Include="Forms\PersonalDataForm.Designer.cs">
       <DependentUpon>PersonalDataForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\SocialLinksForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\SocialLinksForm.Designer.cs">
+      <DependentUpon>SocialLinksForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ProcessChecker.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -147,6 +153,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\PersonalDataForm.resx">
       <DependentUpon>PersonalDataForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\SocialLinksForm.resx">
+      <DependentUpon>SocialLinksForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
