--- a/CVFiller/CVFiller/FormFiller.csproj
+++ b/CVFiller/CVFiller/FormFiller.csproj
@@ -104,6 +104,18 @@
     <Compile Include="Forms\AddressForm.Designer.cs">
       <DependentUpon>AddressForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\JobsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\JobsForm.Designer.cs">
+      <DependentUpon>JobsForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\UniversityForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\UniversityForm.Designer.cs">
+      <DependentUpon>UniversityForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FormTemplate.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -147,6 +159,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\AddressForm.resx">
       <DependentUpon>AddressForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\JobsForm.resx">
+      <DependentUpon>JobsForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\UniversityForm.resx">
+      <DependentUpon>UniversityForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormTemplate.resx">
       <DependentUpon>FormTemplate.cs</DependentUpon>
